update seo gettings

--- a/src/components/ResumeItem.astro
+++ b/src/components/ResumeItem.astro
@@ -7,7 +7,7 @@ type Props = ResumeItem;
 const { title, company, date, description } = Astro.props;
 ---
 
-<div class="py-4 border-b border-gray-900 last:border-b-0">
+<div class="py-4 border-b border-gray-200 dark:border-gray-900 last:border-b-0">
   <a
     href={company.url}
     class="flex items-start justify-between group hover:opacity-80 transition-opacity"
