--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -14,7 +14,7 @@ const htmlDescription = marked.parse(description)
   <a
     href={url}
     target="_blank"
-    class="h-full bg-gray-700 rounded-lg aspect-video sm:h-[150px] block"
+    class="h-full bg-gray-200 dark:bg-gray-700 rounded-lg aspect-video sm:h-[150px] block"
   >
     <Image
       width={1920}
@@ -39,7 +39,7 @@ const htmlDescription = marked.parse(description)
           <a
             href={demoUrl}
             target="_blank"
-            class="text-blue-400 hover:text-blue-300 underline"
+            class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 underline"
           >
 See demo
           </a>
