--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -51,7 +51,7 @@ const { Content,  remarkPluginFrontmatter} = await render(entry);
       class="apsect-video w-full rounded-xl mb-10"
     />
     <article
-      class="prose prose-invert prose-a:text-blue-300 prose-a:underline-offset-4 prose-headings:mb-2 prose-p:text-[#b3b3b3]"
+      class="prose dark:prose-invert prose-a:text-blue-600 dark:prose-a:text-blue-300 prose-a:underline-offset-4 prose-headings:mb-2 prose-p:text-gray-600 dark:prose-p:text-[#b3b3b3]"
     >
       <Content />
     </article>
