--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ posts.splice(2)
         alt={identity.name}
         width={100}
         height={100}
-        class="rounded-full"
+        class="rounded-full bg-white"
       />
       <div class="group flex flex-col justify-center gap-2 w-fit">
         {
