--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ posts.splice(2)
       {
         posts.map((post) => (
           <a
-            href={`/blog/${post.id}`}
+            href={`/blog/${post.id.replace(/\.md$/, '')}`}
             class=" sm:flex sm:flex-row-reverse sm:justify-between sm:gap-6 post"
           >
             <Image
