--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,32 +10,41 @@ const { title, description, image, year, url, demoUrl } = Astro.props;
 const htmlDescription = marked.parse(description)
 ---
 
-<div class="flex-1 group">
-  <a href={url} target="_blank" class="block mb-4">
+<div class="sm:py-5 py-10 flex flex-col sm:flex-row gap-6 group-hover:opacity-60 hover:!opacity-100 transition-opacity">
+  <a
+    href={url}
+    target="_blank"
+    class="h-full bg-gray-200 dark:bg-gray-700 rounded-lg aspect-video sm:h-[150px] block"
+  >
     <Image
       width={1920}
       height={1080}
       src={image}
       alt={title}
-      class="w-full h-48 object-cover rounded opacity-70 group-hover:opacity-100 transition-opacity"
+      class="w-full h-full object-cover rounded-lg aspect-video"
     />
   </a>
-  <div>
-    <p class="text-xs uppercase tracking-wider opacity-40 mb-2">[{year}]</p>
-    <a href={url} target="_blank" class="block">
-      <h2 class="text-xl font-medium mb-2 opacity-90 group-hover:opacity-100 transition-opacity">{title}</h2>
-    </a>
-    <div class="text-sm opacity-60 leading-relaxed">
-      <Fragment set:html={htmlDescription} />
-    </div>
-    {demoUrl && (
-      <a
-        href={demoUrl}
-        target="_blank"
-        class="inline-block mt-4 text-xs uppercase tracking-wider opacity-60 hover:opacity-100 transition-opacity"
-      >
-        [View Demo →]
+  <div class="flex-1">
+    <div class="flex items-center gap-1 mb-2">
+      <a href={url} target="_blank" class="hover:underline">
+        <h2 class="font-medium">{title}</h2>
       </a>
-    )}
+      <span class="opacity-60">· {year}</span>
+    </div>
+    <div class="opacity-60">
+      <Fragment set:html={htmlDescription} />
+      {demoUrl && (
+        <span>
+          {" "}
+          <a
+            href={demoUrl}
+            target="_blank"
+            class="text-blue-600 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 underline"
+          >
+See demo
+          </a>
+        </span>
+      )}
+    </div>
   </div>
 </div>
